修改BUG，优化日志